Fix some misaligned buttons (end game, reset editor)

--- a/src/main/webapp/css/global/common.css
+++ b/src/main/webapp/css/global/common.css
@@ -126,3 +126,11 @@
 .form-width {
     max-width: 50rem;
 }
+
+/* Remove margin and padding from forms by default.
+----------------------------------------------------------------------------- */
+
+form {
+    padding: 0;
+    margin: 0;
+}
